chore: migrate to Vite + base setup for Firebase (env)

--- a/package.json
+++ b/package.json
@@ -1,22 +1,1 @@
-{
-  "name": "kodo-zenko",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "echo 'No linter configured yet'"
-  },
-  "dependencies": {
-    "firebase": "^12.6.0"
-  },
-  "devDependencies": {
-    "vite": "^6.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  }
-}
+{\n  "name": "kodo",\n  "private": true,\n  "version": "1.0.0",\n  "type": "module",\n  "scripts": {\n    "dev": "vite",\n    "build": "vite build",\n    "preview": "vite preview"\n  },\n  "dependencies": {\n    "firebase": "^10.7.1"\n  },\n  "devDependencies": {\n    "vite": "^5.0.8"\n  }\n}
